完善功能: 易导航功能基本完成

--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -4,8 +4,8 @@
     "description": "前后分离的 vue3 + vite + yite-cli 后台管理模板",
     "scripts": {
         "preinstall": "npx only-allow pnpm",
-        "dev": "yite --command=dev --env-file=development",
-        "build": "yite --command=build --env-file=production",
+        "dev": "yite --command=dev  --envfile=development",
+        "build": "yite --command=build --envfile=production",
         "update": "yite --command=update --project-type=yiadmin"
     },
     "type": "module",
@@ -28,23 +28,23 @@
     },
     "homepage": "https://yicode.tech",
     "dependencies": {
-        "@arco-design/web-vue": "^2.54.4",
+        "@arco-design/web-vue": "^2.54.5",
         "@arco-plugins/vite-vue": "^1.4.5",
-        "@iconify/json": "^2.2.184",
+        "@iconify/json": "^2.2.186",
         "@yicode/yidash": "3.6.10",
         "axios": "^1.6.7",
         "date-fns": "^3.3.1",
         "js-md5": "^0.8.3",
         "lodash-es": "^4.17.21",
         "pinia": "^2.1.7",
-        "sass": "^1.71.0",
+        "sass": "^1.71.1",
         "store2": "^2.14.3",
         "vue": "^3.4.19",
         "vue-i18n": "^9.9.1",
-        "vue-router": "^4.2.5"
+        "vue-router": "^4.3.0"
     },
     "devDependencies": {
-        "@yicode/yite-cli": "2.2.8"
+        "@yicode/yite-cli": "^2.2.14"
     },
     "gitHead": "3badb811062969b5b99b5445e36cc8f99548c978"
 }
