--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -31,12 +31,12 @@
         "url": "https://github.com/yicode-team/yicode.git"
     },
     "dependencies": {
-        "@yicode/sync-user-database": "^1.1.2",
-        "@yicode/yiapi": "3.17.2",
+        "@yicode/sync-user-database": "^1.1.3",
+        "@yicode/yiapi": "^3.17.3",
         "lodash-es": "^4.17.21"
     },
     "gitHead": "3badb811062969b5b99b5445e36cc8f99548c978",
     "devDependencies": {
-        "nodemon": "^3.0.3"
+        "nodemon": "^3.1.0"
     }
 }
