--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -5,11 +5,12 @@
     "type": "module",
     "scripts": {
         "preinstall": "npx only-allow pnpm",
-        "dev": "yite --command=dev --env-file=development",
-        "build": "yite --command=build --env-file=production"
+        "dev": "yite --command=dev --envfile=development",
+        "build": "yite --command=build --envfile=production"
     },
     "dependencies": {
-        "@arco-design/web-vue": "^2.54.4",
+        "@arco-design/web-vue": "^2.54.5",
+        "@arco-plugins/vite-vue": "^1.4.5",
         "@yicode/yidash": "^3.6.10",
         "axios": "^1.6.7",
         "blueimp-md5": "^2.19.0",
@@ -21,6 +22,9 @@
         "vue": "^3.4.19",
         "vue-i18n": "^9.9.1",
         "vue-meta": "^2.4.0",
-        "vue-router": "^4.2.5"
+        "vue-router": "^4.3.0"
+    },
+    "devDependencies": {
+        "@yicode/yite-cli": "^2.2.14"
     }
 }
