--- a/packages/admin/src/env/.env.production
+++ b/packages/admin/src/env/.env.production
@@ -1,2 +1,2 @@
-VITE_HOST="https://127.0.0.1:3000/api"
-VITE_NAMESPACE="pro.yiadmin"
+VITE_HOST="https://nav-api.yicode.tech/api"
+VITE_NAMESPACE="pro.nav-admin.yicode.tech"
