--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -4,27 +4,17 @@
     "version": "1.0.1",
     "type": "module",
     "scripts": {
-        "preinstall": "npx only-allow pnpm",
         "dev": "yite --command=dev --envfile=development",
         "build": "yite --command=build --envfile=production"
     },
     "dependencies": {
-        "@arco-design/web-vue": "^2.54.5",
+        "@arco-design/web-vue": "^2.57.0",
         "@arco-plugins/vite-vue": "^1.4.5",
-        "@yicode/yidash": "^3.6.11",
-        "axios": "^1.6.7",
+        "axios": "^1.8.4",
         "blueimp-md5": "^2.19.0",
-        "date-fns": "^3.3.1",
+        "date-fns": "^3.6.0",
         "lodash-es": "^4.17.21",
-        "pinia": "^2.1.7",
-        "store2": "^2.14.3",
-        "tiny-cookie": "^2.5.1",
-        "vue": "^3.4.20",
-        "vue-i18n": "^9.9.1",
-        "vue-meta": "^2.4.0",
-        "vue-router": "^4.3.0"
+        "store2": "^2.14.4"
     },
-    "devDependencies": {
-        "@yicode/yite-cli": "^2.2.15"
-    }
+    "devDependencies": {}
 }
