--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -4,17 +4,9 @@
     "version": "1.0.1",
     "type": "module",
     "scripts": {
-        "dev": "yite --command=dev --envfile=development",
-        "build": "yite --command=build --envfile=production"
+        "dev": "yite --command=dev --envfile=development --mode=development --workdir=./",
+        "build": "yite --command=build --envfile=production --mode=production --workdir=./"
     },
-    "dependencies": {
-        "@arco-design/web-vue": "^2.57.0",
-        "@arco-plugins/vite-vue": "^1.4.5",
-        "axios": "^1.8.4",
-        "blueimp-md5": "^2.19.0",
-        "date-fns": "^3.6.0",
-        "lodash-es": "^4.17.21",
-        "store2": "^2.14.4"
-    },
+    "dependencies": {},
     "devDependencies": {}
 }
