--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -3,9 +3,9 @@
     "version": "1.1.15",
     "description": "前后分离的 vue3 + vite + yite-cli 后台管理模板22",
     "scripts": {
-        "dev": "yite --command=dev  --envfile=development",
-        "build": "yite --command=build --envfile=production",
-        "update": "yite --command=update --project-type=yiadmin"
+        "dev": "yite --command=dev --envfile=development --mode=development --workdir=./",
+        "build": "yite --command=build --envfile=production --mode=production --workdir=./",
+        "template": "yite --command=update --project-type=yiadmin"
     },
     "type": "module",
     "private": false,
