--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -25,7 +25,7 @@
         "type": "git",
         "url": "https://github.com/yicode-team/yicode.git"
     },
-    "homepage": "https://yicode.tech",
+    "homepage": "https://chensuiyi.me",
     "dependencies": {},
     "devDependencies": {},
     "gitHead": "3badb811062969b5b99b5445e36cc8f99548c978"
