--- a/packages/api/.env.production
+++ b/packages/api/.env.production
@@ -20,9 +20,9 @@ TIMEZONE="Asia/Shanghai"
 MYSQL_HOST="127.0.0.1"
 MYSQL_PORT=3306
 MYSQL_DB="yinav"
-MYSQL_USERNAME="root"
-MYSQL_PASSWORD="root"
-TABLE_PRIMARY_KEY="default"
+MYSQL_USERNAME="yinav123456"
+MYSQL_PASSWORD="yinav123456"
+TABLE_PRIMARY_KEY="time"
 # redis 配置
 REDIS_HOST="127.0.0.1"
 REDIS_PORT=6379
