--- a/packages/api/.env.development
+++ b/packages/api/.env.development
@@ -22,7 +22,7 @@ MYSQL_PORT=3306
 MYSQL_DB="yinav"
 MYSQL_USERNAME="root"
 MYSQL_PASSWORD="root"
-TABLE_PRIMARY_KEY="default"
+TABLE_PRIMARY_KEY="time"
 # redis 配置
 REDIS_HOST="127.0.0.1"
 REDIS_PORT=6379
